--- a/src/css/card.css
+++ b/src/css/card.css
@@ -76,30 +76,15 @@
 .card.active .bg-overlay {
     opacity: 0;
 }
-/* 
-.circular-border {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: rgb(12, 51, 57);
-    position: relative;
+
+
+
+@media (max-width:600px){
+    
+
+    .card, .card.active{
+        width: 100%;
+        margin: 0px !important;
+    }
+
 }
-i {
-    font-style: normal;
-    font-size: 35px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-a {
-    color: inherit;
-    text-decoration: none;
-} */
-/* p {
-    opacity: 0;
-    transition: 0.4s;
-}
-.card.active p {
-    opacity: 1;
-} */
